--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -27,6 +27,7 @@
 .btn--medium {
   padding: 8px 20px;
   font-size: 18px;
+  width: 130px;
 }
 
 .btn--large {
@@ -40,4 +41,9 @@
   background: #fff;
   color: #242424;
   transition: 250ms;
+}
+
+@media (max-width: 960px) {
+  .btn .btn--primary {
+  }
 }
