--- a/src/components/VideoPopup.css
+++ b/src/components/VideoPopup.css
@@ -29,3 +29,14 @@
   background-color: rgba(255, 255, 255, 0.3);
   border: none;
 }
+
+@media (max-width: 960px) {
+  .popup {
+    background-color: #000;
+    height: 100vh;
+  }
+  .popup-inner {
+    width: 100%;
+    height: 400px;
+  }
+}
