--- a/src/components/VideoPopup.css
+++ b/src/components/VideoPopup.css
@@ -26,7 +26,7 @@
   z-index: 1;
   color: #000;
   cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: transparent;
   border: none;
 }
 
