--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -21,16 +21,16 @@
 .navbar-logo {
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
+  margin-left: 10px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
   display: flex;
   align-items: center;
-  /* width: 250px; */
+  width: 270px;
 }
 
-.fa-typo3 {
+.fa-home {
   margin-left: 0.5rem;
   font-size: 1.8rem;
 }
