--- a/src/components/VideoPopup.css
+++ b/src/components/VideoPopup.css
@@ -1,10 +1,10 @@
 .popup {
   position: absolute;
-  top: 0;
+  margin: auto;
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,6 +37,15 @@
   }
   .popup-inner {
     width: 100%;
+    height: 400px;
+  }
+}
+
+@media (max-height: 678px) {
+  .popup {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  .popup-inner {
     height: 400px;
   }
 }
